# mindboxlib

./: README.md  pyproject.toml
mindboxlib/: __init__.py  shapes.py
mindboxlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_shapes.py
