[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindboxlib"
version = "0.0.1"
description = "Библиотека для вычисления площади геометрических фигур"
authors = [{ name = "Кристиан", email = "kristiankaramanov@yandex.ru" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mindboxlib*"]